# pytui

./: .flake8  .gitignore  .pre-commit-config.yaml  build.sh  ipython_startup.py  pdoc.yml  pyproject.toml  pytest.ini
src/: __main__.py
src/libs/: _strings.py  apis.py  interface.py
tests/: test_placeholder.py  test_settings.py
