[project]
name = "pytui"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["prompt_toolkit", "pygments", "pynvim", "tasklib"]
[tool.uv]
dev-dependencies = [
  "pre-commit", "ipython", "ptpython", "pudb", "black", "flake8", "isort",
  "mypy", "pytest", "pytest-cov", "pdoc", "neovim"
]
